--- a/app_movil/pubspec.yaml
+++ b/app_movil/pubspec.yaml
@@ -9,10 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^4.4.0
-  firebase_auth: ^6.1.4
-  firebase_ui_auth: ^3.0.1
-  firebase_ui_oauth_google: ^2.0.1
+  cupertino_icons: ^1.0.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  # AGREGA ESTO:
+  mobile_scanner: ^5.2.3
+  firebase_ui_auth: ^1.13.0
+  firebase_ui_oauth_google: ^1.3.0
 
 dev_dependencies:
   flutter_test:
